--- a/css/main.css
+++ b/css/main.css
@@ -2,12 +2,13 @@ html,body{
 	height:100%;
 }
 body{
-	background:linear-gradient(135deg,hsl(200,100%,76%) 0,hsl(200,100%,90%) 100%);
+	background:linear-gradient(135deg,hsl(200,100%,76%) 0,hsl(200,100%,90%) 100%) fixed;
 }
 #warp{
 	width:896px;background:#FFF6;
 	margin:0 auto;padding:20px 40px 40px 40px;
 	box-shadow:2px 2px 5px #0004;
+	margin-bottom:20px;
 }
 h1{
 	border-bottom:4px solid #666;
@@ -29,8 +30,7 @@ p{
 	display:block;background:#FFF3;
 	width:60px;height:60px;
 	text-align:center;line-height:60px;
-	text-decoration:none;color:#3330;
-	margin-bottom:-60px;border-radius:100%;
+	text-decoration:none;border-radius:100%;
 	box-shadow:1px 1px 4px #0004;
 	transition:margin-bottom 0.8s,color 0.8s;
 }
