--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,7 @@ p{
 	position:fixed;top:80px;left:80px;
 	width:60px;height:60px;background:#FFF0;
 	transform:scale(1.5);transform-origin:0 0;
+	z-index:10;
 }
 #nav:hover{
 	height:300px;
