--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@ html,body{
 	height:100%;min-width:1440px;
 }
 body{
-	background:linear-gradient(135deg,hsl(200,100%,76%) 0,hsl(200,100%,90%) 100%) fixed;mix-blend-mode:lighten;
+	background:linear-gradient(135deg,hsl(200,100%,76%) 0,hsl(200,100%,90%) 100%) fixed;
 }
 #warp{
 	width:896px;background:#FFF6;text-align:center;
